--- a/data/style.css
+++ b/data/style.css
@@ -31,9 +31,10 @@ div { font-size: 2.0rem; }
 
 .toggle_switch {
     text-align: center;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     /* padding: 2rem; */
-    /* cursor: pointer; */
+    padding-right: 2rem;
+    cursor: pointer;
     color: #cc0000;
 }
 .active {
